--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<h1>Hello!</h1>
 	<p>Welcome to my page! I hope this journey is going to be awesome with you! Thanks for bearing with me. Click on the following button to expand and view dummy text. <br> <a onclick="readMore()"> Read More > </a></p>
 	<p id = "dummy" style="display: none;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p style="margin-bottom:0px"> Now, I will state some of the things I do at home:-</p>
+	<p style="margin-bottom:0px"> Now, I shall state some of the things I do at home:-</p>
 	<ul>
 		<li> Code: I love to learn coding at home, and so I do courses at different portals. </li>
 		<li> Write: I love to write stories! I am currently working on a fantasy novel for kids. </li>
